// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilterDropdown.vue should open dropdown when clicking toggle 1`] = `
<section><button class="dropdown__toggle dropdown__toggle--active"><svg width="18" height="20" viewBox="0 0 18 20" xmlns="http://www.w3.org/2000/svg">
      <g fill="#036FE2" fill-rule="evenodd">
        <path d="M8.3 6.7l1.4-1.4L5 .58.3 5.29l1.4 1.42L4 4.4v11.6h2V4.4zM16.3 13.3L14 15.58V4h-2V15.6l-2.3-2.3-1.4 1.42 4.7 4.7 4.7-4.7z"></path>
      </g>
    </svg></button>
  <div class="dropdown is-open">
    <div class="section">
      <h6 class="text is-xsmall is-txtSoftGrey u-tupper letter-spacing">FilterDropdown.showMe</h6>
      <ul class="list">
        <li class="type text is-caption is-txtGrey type--selected"><a href="javascript:void(0)" class="element element--selected">
            FilterDropdown.types.maps
          </a></li>
        <li class="type text is-caption is-txtGrey"><a href="javascript:void(0)" class="element">
            FilterDropdown.types.shared
          </a></li>
        <li class="type text is-caption is-txtGrey"><a href="javascript:void(0)" class="element">
            FilterDropdown.types.favorited
          </a></li>
        <li class="type text is-caption is-txtGrey"><a href="javascript:void(0)" class="element">
            FilterDropdown.types.locked
          </a></li>
        <li class="type text is-caption is-txtGrey"><a href="javascript:void(0)" class="element">
            FilterDropdown.types.publicPrivacy
          </a> |
          <a href="javascript:void(0)" class="element">
            FilterDropdown.types.privatePrivacy
          </a> |
          <a href="javascript:void(0)" class="element">
            FilterDropdown.types.linkPrivacy
          </a> |
          <a href="javascript:void(0)" class="element">
            FilterDropdown.types.passwordPrivacy
          </a></li>
      </ul>
    </div>
    <div class="section">
      <h6 class="text is-xsmall is-txtSoftGrey u-tupper letter-spacing">FilterDropdown.orderMaps</h6>
      <ul class="list">
        <li class="type text is-caption is-txtGrey type--selected">
          FilterDropdown.order.date.title (
          <a href="javascript:void(0)" class="element element--selected">
            FilterDropdown.order.date.newest
          </a> |
          <a href="javascript:void(0)" class="element">
            FilterDropdown.order.date.oldest
          </a>
          )
        </li>
        <li class="type text is-caption is-txtGrey">
          FilterDropdown.order.alphabetical.title (
          <a href="javascript:void(0)" class="element">
            FilterDropdown.order.alphabetical.A-Z
          </a> |
          <a href="javascript:void(0)" class="element">
            FilterDropdown.order.alphabetical.Z-A
          </a>
          )
        </li>
        <li class="type text is-caption is-txtGrey"><a href="javascript:void(0)" class="element">
            FilterDropdown.order.views
          </a></li>
      </ul>
    </div>
  </div>
</section>
`;

exports[`FilterDropdown.vue should render correct contents based on filter and order 1`] = `
<section><button class="dropdown__toggle"><svg width="18" height="20" viewBox="0 0 18 20" xmlns="http://www.w3.org/2000/svg">
      <g fill="#036FE2" fill-rule="evenodd">
        <path d="M8.3 6.7l1.4-1.4L5 .58.3 5.29l1.4 1.42L4 4.4v11.6h2V4.4zM16.3 13.3L14 15.58V4h-2V15.6l-2.3-2.3-1.4 1.42 4.7 4.7 4.7-4.7z"></path>
      </g>
    </svg></button>
  <div class="dropdown">
    <div class="section">
      <h6 class="text is-xsmall is-txtSoftGrey u-tupper letter-spacing">FilterDropdown.showMe</h6>
      <ul class="list">
        <li class="type text is-caption is-txtGrey"><a href="javascript:void(0)" class="element">
            FilterDropdown.types.maps
          </a></li>
        <li class="type text is-caption is-txtGrey"><a href="javascript:void(0)" class="element">
            FilterDropdown.types.shared
          </a></li>
        <li class="type text is-caption is-txtGrey"><a href="javascript:void(0)" class="element">
            FilterDropdown.types.favorited
          </a></li>
        <li class="type text is-caption is-txtGrey"><a href="javascript:void(0)" class="element">
            FilterDropdown.types.locked
          </a></li>
        <li class="type text is-caption is-txtGrey type--selected"><a href="javascript:void(0)" class="element">
            FilterDropdown.types.publicPrivacy
          </a> |
          <a href="javascript:void(0)" class="element">
            FilterDropdown.types.privatePrivacy
          </a> |
          <a href="javascript:void(0)" class="element element--selected">
            FilterDropdown.types.linkPrivacy
          </a> |
          <a href="javascript:void(0)" class="element">
            FilterDropdown.types.passwordPrivacy
          </a></li>
      </ul>
    </div>
    <div class="section">
      <h6 class="text is-xsmall is-txtSoftGrey u-tupper letter-spacing">FilterDropdown.orderMaps</h6>
      <ul class="list">
        <li class="type text is-caption is-txtGrey type--selected">
          FilterDropdown.order.date.title (
          <a href="javascript:void(0)" class="element element--selected">
            FilterDropdown.order.date.newest
          </a> |
          <a href="javascript:void(0)" class="element">
            FilterDropdown.order.date.oldest
          </a>
          )
        </li>
        <li class="type text is-caption is-txtGrey">
          FilterDropdown.order.alphabetical.title (
          <a href="javascript:void(0)" class="element">
            FilterDropdown.order.alphabetical.A-Z
          </a> |
          <a href="javascript:void(0)" class="element">
            FilterDropdown.order.alphabetical.Z-A
          </a>
          )
        </li>
        <li class="type text is-caption is-txtGrey"><a href="javascript:void(0)" class="element">
            FilterDropdown.order.views
          </a></li>
      </ul>
    </div>
  </div>
</section>
`;
